--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,11 @@ build-backend = "poetry.core.masonry.api"
 python = "^3.9"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2"
-mypy = "^1.6.1"
+pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
+pytest-xdist = "^3.0.2"
+coverage = "^6.5.0"
+yapf = "^0.32.0"
+pylint = "^2.15.5"
+pylint-fail-under = "^0.3.0"
+mypy = "^0.991"
